--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.1",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "mongoose": "^5.13.2",
